Bug 1618582 - Make `GeckoView#onTouchEventForResult()` return correct values r=kats

This also makes `GeckoView#onTouchEvent()` always return `true`, because
returning `false` will cause us to not receive any more events for that
touch. We always want to receive events.

Differential Revision: https://phabricator.services.mozilla.com/D64781